--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -17,8 +17,7 @@ body {
     flex-wrap: wrap;
     flex-direction: column;
     margin: 0 auto;
-
-
+    
     background-image: linear-gradient(var(--bg2), var(--color2));
 }
 
@@ -41,6 +40,7 @@ div {
 
 h4 {
     color: var(--color3);
+    font-size: 24px;
     
 }
 
@@ -87,5 +87,5 @@ footer {
 }
 
 
-/* STYLING FOR SCORE PAGE */
+
 
