--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -90,8 +90,8 @@ footer {
     display: flex;
     flex-direction: row;
     align-self: center;
-    margin: 10px;
-    padding: 10px;
+    margin-top: 20px;
+    padding: 5px;
 }
 
 
